# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [2.1.5] - 2023-07-20
### Added
- [UPDATE_SYSTEM] Add timestamps in logs when starting/stopping an upgrade
### Changed
- [HAPROXY] [RSYSLOG_TEMPLATES] Update templates to use new <name>_json versions
### Removed
- [SYSCTL] Obsolete parameter 'net.inet.ip.rfc1122_strong_es'


## [2.1.4] - 2023-07-11
### Fixed
- [PROXY.SH] Remove scheme from provided proxy value

## [2.1.3] - 2023-07-10
### Changed
- [UPDATE_SYSTEM] Lock/unlock vulture packages between upgrades
- [UPDATE_SYSTEM] Properly stop crontabs during upgrades
### Fixed
- [UPDATE_SYSTEM] Ensure secadm version stays up-to-date with the kernel version
- [UPGRADE_TO_13] Use Boot Environments to have a safer upgrade


## [2.1.2] - 2023-05-24
### Fixed
- [UPGRADE_TO_13] Use a Boot Environment to avoid problems during system upgrade
### Changed
- [LOADER] Update loader.conf to reflect changes made on Vulture OS/release
- [ADMIN] Deprecate use of mkjail_* scripts
- [CLUSTER_CREATE] Improve script by returning status code
- [CLUSTER_CREATE] Correctly handle vultured start/restart at the end of the script


## [2.1.1] - 2023-03-30
### Changed
- [UPDATE] [SYSTEM] Default base upgrade merge strategy is now 'mine-full' (keep local versions)
### Fixed
- [UPDATE] [SYSTEM] Ensure options used during hbsd-update are all kept for jails' upgrades


## [2.1.0] - 2023-03-16
### Added
- [UPGRADE] [HBSD13] Add a script to register new Vulture's HBSD13 own repositories (and disable previous ones)
- [UPGRADE] [HBSD13] Add an upgrade script to go from HBSD12 to HBSD13 (and switch to Vulture's own repositories)
### Changed
- [SYSTEM] [MOTD] Updated MOTD to notify about new script to upgrade to HBSD13
### Fixed