@@ -4,6 +4,10 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [Unreleased]
+### Added
+- [UPDATE_SYSTEM] Updating toggle maintenance
+
 
 ## [2.1.5] - 2023-07-20
 ### Added
@@ -17,6 +21,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [2.1.4] - 2023-07-11
 ### Fixed
 - [PROXY.SH] Remove scheme from provided proxy value
+
 
 ## [2.1.3] - 2023-07-10
 ### Changed
